# hebrew_rs

./: Cargo.toml  README.md  Readme.md
examples/: bereshit.rs  parse_word.rs
src/: letter.rs  lib.rs  macros.rs  phrase.rs  prelude.rs  types.rs  word.rs
src/letter/: base.rs  base_constants.rs  dot.rs  end.rs  letter_constants.rs  non_end.rs  tl_letter_constants.rs
src/word/: end_word.rs  non_end_word.rs
